# fleetintel-mcp

./: # Arquivo 1 (600k registros).txt  .clinerules  .dockerignore  .editorconfig  .env.example  .env.local.example  .env.production.example  .env.staging.example  .env.test  .gitignore  Makefile  README.md  docker-compose.local.yml  pyproject.toml  requirements.txt  test_agent.py
.github/: PULL_REQUEST_TEMPLATE.md
agent/: README.md  __init__.py  agent.py  memory.py  memory_state_of_the_art.py  responses.py  test_agent.py
app/: README.md  config.py  main.py
deploy/: README.md
docs/: APLICAR_MIGRATIONS_MANUAL.md  ARCHITECTURE_MCP_REDESIGN.md  CARGA_COMPLETA_STATUS_2026-02-04.md  CHECKPOINT_2026-02-04.md  CORRECOES_APLICADAS.md  DATABASE_REDESIGN_V2.md  DATA_SYNC.md  DATA_TYPE_VALIDATION_REPORT_2026-02-03.md  DATA_VALIDATION_REPORT_2026-02-02.md  DIAGNOSTIC_OPUS_4_6.md  DOCKER.md  EPIC2_FINAL_STATUS.md  EPIC2_VALIDATION.md  EPIC2_VALIDATION_FINAL.md  EPIC3_PRE_EXECUTION_CHECK.md  EPIC3_PROGRESS.md  EPIC3_SCRIPTS_OVERVIEW.md  EPICS.md  EPIC_0-3_FINAL_STATUS.md  ETL_CORRECTION_PLAN_2026-02-04.md  ETL_LOAD_STATUS_2026-02-03.md  ETL_OPTIMIZATION_SUMMARY.md  ETL_PERFORMANCE_OPTIMIZATION_PLAN.md  FASTAPI_MCP_SERVER_STATUS.md  FINAL_STATUS_REPORT_2026-02-02.md  GIT_WORKFLOW.md  HANDOFF_CHECKLIST.md  INTELLIGENT_AGENT_DESIGN.md  LESSONS_LEARNED.md  MCP_CLEANUP_PLAN.md  MCP_SKILLS_STATUS_REPORT.md  MIGRATION_GUIDE.md  ONBOARDING_AGENT.md  PGVECTOR_IMPLEMENTATION_PLAN.md  PROJECT_REORGANIZATION_PLAN.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  REDESIGN_STATUS.md  RESPOSTA_PERGUNTAS_INTEGRACOES.md  (+13 more)
infra/: cloudflare-tunnel.yml
jobs/: README.md  __init__.py
mcp/: main.py  scheduler.py
mcp_server/: README.md  __init__.py  main.py  mcp_client.py  test_mcp_tools.py  vector_search.py
scripts/: README.md  README_OPTIMIZED.md  apply_migrations.py  apply_pgvector_migrations.py  benchmark_etl.py  benchmark_vector_search.py  check_db_counts.py  check_db_counts_simple.py  check_db_counts_v2.py  check_db_data_types.py  check_functions.py  check_locks.py  check_schema.py  clean_database.py  create_indexes.sql  db_health.py  db_maintenance.py  debug_etl.py  diagnose_data_type_error.py  diagnose_postgrest.sql  diagnose_raw_data_types.py  docker-down.sh  docker-logs.sh  docker-up.sh  enable_pgvector.py  fix_and_apply_migrations.py  fix_marcas_insert.py  fix_timeout.py  (+46 more)
(+46 files in other folders)
